--- a/environments/templates/envs.yaml
+++ b/environments/templates/envs.yaml
@@ -28,7 +28,7 @@ spec:
     targetRevision: {{ $env_obj.revision | default $.Values.repository.revision }}
     helm:
       valueFiles:
-        - ../../environments/{{ $env_name }}/env.yaml
+        - {{ printf "%s/environments/%s/env.yaml" $.Values.repository.root_from_charts $env_name }}
   {{- with $env_obj.syncPolicy }}
   syncPolicy:
   {{- toYaml . | nindent 4 }}
