--- a/grafana/Chart.yaml
+++ b/grafana/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: grafana
 version: 0.1.0
-appVersion: "v10.1"
+appVersion: "v9.5"
 dependencies:
   - name: grafana-dashboards
     version: 0.1.0
@@ -18,9 +18,9 @@ dependencies:
     repository: file://../chart_deps/grafana/grafana-operated
     alias: grafana-main
     condition: grafana-main.enabled
-  #https://github.com/grafana-operator/grafana-operator/tree/v5.3.0/deploy/helm/grafana-operator
+  #https://github.com/grafana/grafana-operator/tree/v5.8.1/deploy/helm/grafana-operator
   - name: grafana-operator
-    version: v5.3.0
+    version: v5.8.1
     alias: grafana-operator
     condition: grafana-operator.enabled
-    repository: oci://ghcr.io/grafana-operator/helm-charts
+    repository: oci://ghcr.io/grafana/helm-charts
