--- a/chart_deps/prometheus/postgres-exporter/templates/deployment.yaml
+++ b/chart_deps/prometheus/postgres-exporter/templates/deployment.yaml
@@ -184,6 +184,9 @@ spec:
 {{ toYaml . | indent 8 }}
     {{- end }}
     {{- with .Values.tolerations }}
+{{- if .Values.priorityClassName }}
+      priorityClassName: {{ .Values.priorityClassName }}
+    {{- end }}
       tolerations:
 {{ toYaml . | indent 8 }}
     {{- end }}
