--- a/chart_deps/app/common/values.yaml
+++ b/chart_deps/app/common/values.yaml
@@ -1,6 +1,9 @@
 # Default values for api.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
+global:
+  image:
+    tag: latest
 
 replicaCount: 1
 revisionHistoryLimit: 2
@@ -8,8 +11,8 @@ revisionHistoryLimit: 2
 image:
   repository: override_me
   pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: latest
+  ## Overrides the image tag whose default is the chart appVersion.
+  #tag: latest
 
 imagePullSecrets: []
 nameOverride: ""
