--- a/chart_deps/app/common/values.yaml
+++ b/chart_deps/app/common/values.yaml
@@ -1,9 +1,9 @@
 # Default values for api.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
-global:
-  image:
-    tag: latest
+#global:
+#  image:
+#    tag: latest
 
 replicaCount: 1
 revisionHistoryLimit: 2
