--- a/crds/grafana-operator/v5.9.0.grafana.integreatly.org_grafanadatasources.yaml
+++ b/crds/grafana-operator/v5.9.0.grafana.integreatly.org_grafanadatasources.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.12.0
+    controller-gen.kubebuilder.io/version: v0.14.0
   name: grafanadatasources.grafana.integreatly.org
 spec:
   group: grafana.integreatly.org
@@ -110,6 +110,9 @@ spec:
                   type: object
                 type: array
               resyncPeriod:
+                default: 5m
+                format: duration
+                pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
                 type: string
               valuesFrom:
                 items:
