--- a/crds/grafana-operator/v5.9.0.grafana.integreatly.org_grafanas.yaml
+++ b/crds/grafana-operator/v5.9.0.grafana.integreatly.org_grafanas.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.12.0
+    controller-gen.kubebuilder.io/version: v0.14.0
   name: grafanas.grafana.integreatly.org
 spec:
   group: grafana.integreatly.org
@@ -15,6 +15,9 @@ spec:
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
+    - jsonPath: .status.version
+      name: Version
+      type: string
     - jsonPath: .status.stage
       name: Stage
       type: string
@@ -3976,6 +3979,8 @@ spec:
                       x-kubernetes-map-type: atomic
                     type: array
                 type: object
+              version:
+                type: string
             type: object
           status:
             properties:
@@ -3998,6 +4003,8 @@ spec:
               stage:
                 type: string
               stageStatus:
+                type: string
+              version:
                 type: string
             type: object
         type: object
