--- a/grafana/Chart.yaml
+++ b/grafana/Chart.yaml
@@ -8,6 +8,11 @@ dependencies:
     repository: file://../chart_deps/grafana/dashboards
     alias: dashboard
     condition: dashboard.enabled
+  - name: grafana-common-dashboards
+    version: 0.1.0
+    repository: file://../chart_deps/grafana/dashboards
+    alias: common-dashboard
+    condition: common-dashboard.enabled
   - name: grafana-datasources
     version: 0.1.0
     repository: file://../chart_deps/grafana/datasources
