--- a/grafana/Chart.yaml
+++ b/grafana/Chart.yaml
@@ -8,6 +8,11 @@ dependencies:
     repository: file://../chart_deps/grafana/dashboards
     alias: dashboard
     condition: dashboard.enabled
+  - name: grafana-dashboards
+    version: 0.1.0
+    repository: file://../chart_deps/grafana/dashboards
+    alias: common-dashboard
+    condition: common-dashboard.enabled
   - name: grafana-datasources
     version: 0.1.0
     repository: file://../chart_deps/grafana/datasources
@@ -18,9 +23,9 @@ dependencies:
     repository: file://../chart_deps/grafana/grafana-operated
     alias: grafana-main
     condition: grafana-main.enabled
-  #https://github.com/grafana/grafana-operator/tree/v5.8.1/deploy/helm/grafana-operator
+  #https://github.com/grafana/grafana-operator/tree/v5.9.0/deploy/helm/grafana-operator
   - name: grafana-operator
-    version: v5.8.1
+    version: v5.9.0
     alias: grafana-operator
     condition: grafana-operator.enabled
     repository: oci://ghcr.io/grafana/helm-charts
