--- a/environment/templates/chart_apps.yaml
+++ b/environment/templates/chart_apps.yaml
@@ -54,9 +54,9 @@ spec:
       valueFiles:
         - {{ printf "%s/%s/%s/values.yaml" $.Values.repository.envs_from_charts $.Values.env.name $chart_app_name }}
     {{- end }}
-    {{- if $chart_app_obj.values }}
-    {{- with $chart_app_obj.values }}
-      values:
+    {{- if $chart_app_obj.valuesObject }}
+    {{- with $chart_app_obj.valuesObject }}
+      valuesObject:
     {{- tpl (toYaml .) $ | nindent 8 }}
     {{- end }}
     {{- end }}
@@ -91,9 +91,9 @@ spec:
       valueFiles:
         - {{ printf "%s/%s/%s/values.yaml" $.Values.repository.envs_from_charts $.Values.env.name $chart_app_name }}
     {{- end }}
-    {{- if $chart_app_obj.values }}
-    {{- with $chart_app_obj.values }}
-      values:
+    {{- if $chart_app_obj.valuesObject }}
+    {{- with $chart_app_obj.valuesObject }}
+      valuesObject:
     {{- tpl (toYaml .) $ | nindent 8 }}
     {{- end }}
     {{- end }}
