--- a/environment/templates/chart_apps.yaml
+++ b/environment/templates/chart_apps.yaml
@@ -60,6 +60,9 @@ spec:
     {{- tpl (toYaml .) $ | nindent 8 }}
     {{- end }}
     {{- end }}
+    {{- if $chart_app_obj.values }}
+      values: {{- tpl $chart_app_obj.values $ | nindent 8 }}
+    {{- end }}
     {{- with $chart_app_obj.values_sources }}
     {{- toYaml . | nindent 2 }}
     {{- end }}
@@ -96,6 +99,9 @@ spec:
       valuesObject:
     {{- tpl (toYaml .) $ | nindent 8 }}
     {{- end }}
+    {{- end }}
+    {{- if $chart_app_obj.values }}
+      values: {{- tpl $chart_app_obj.values $ | nindent 8 }}
     {{- end }}
   {{- end }}
   {{- with $chart_app_obj.syncPolicy }}
