--- a/environment/values.yaml
+++ b/environment/values.yaml
@@ -78,13 +78,8 @@ chart_apps:
 
         ingress:
           hostname: "argocd.int.{{ .Values.company.domain.name }}"
-          paths:
-            - /
           pathType: ImplementationSpecific
-          tls:
-            - hosts:
-              - argocd.int.{{ .Values.company.domain.name }}
-              secretName: argocd-tls
+          tls: true
   thanos:
     enabled: false
     values: |
@@ -103,7 +98,7 @@ chart_apps:
               {{- end }}
         query:
           stores:
-            - thanos.prd.{{ .Values.company.domain.name }}
+            - thanos.prd.{{ .Values.company.domain.name }}:443
       dev:
         compactor:
           serviceAccount:
@@ -119,7 +114,7 @@ chart_apps:
               {{- end }}
         query:
           stores:
-            - thanos.dev.{{ .Values.company.domain.name }}
+            - thanos.dev.{{ .Values.company.domain.name }}:443
       int:
         compactor:
           serviceAccount:
