Add missing argocd node

--- a/environment/values.yaml
+++ b/environment/values.yaml
@@ -63,23 +63,24 @@ chart_apps:
   argocd:
     enabled: false
     values: |
-      controller:
-        serviceAccount:
-          annotations:
-            {{- if .Values.company.gcp.project_id }}
-            iam.gke.io/gcp-service-account: argocd@{{ .Values.company.gcp.project_id }}.iam.gserviceaccount.com
-            {{- end }}
-      server:
-        serviceAccount:
-          annotations:
-            {{- if .Values.company.gcp.project_id }}
-            iam.gke.io/gcp-service-account: argocd@{{ .Values.company.gcp.project_id }}.iam.gserviceaccount.com
-            {{- end }}
+      argo-cd:
+        controller:
+          serviceAccount:
+            annotations:
+              {{- if .Values.company.gcp.project_id }}
+              iam.gke.io/gcp-service-account: argocd@{{ .Values.company.gcp.project_id }}.iam.gserviceaccount.com
+              {{- end }}
+        server:
+          serviceAccount:
+            annotations:
+              {{- if .Values.company.gcp.project_id }}
+              iam.gke.io/gcp-service-account: argocd@{{ .Values.company.gcp.project_id }}.iam.gserviceaccount.com
+              {{- end }}
 
-        ingress:
-          hostname: "argocd.int.{{ .Values.company.domain.name }}"
-          pathType: ImplementationSpecific
-          tls: true
+          ingress:
+            hostname: "argocd.int.{{ .Values.company.domain.name }}"
+            pathType: ImplementationSpecific
+            tls: true
   thanos:
     enabled: false
     values: |
