cert-manager new domain attr + use parameters for domain related stuff in evironment chart + refactor environment company.domain attrs

--- a/cert-manager/templates/cluster_issuers.yaml
+++ b/cert-manager/templates/cluster_issuers.yaml
@@ -7,6 +7,6 @@ metadata:
 spec:
   {{- with $cluster_issuer_obj.acme }}
   acme:
-  {{- toYaml . | nindent 4 }}
+  {{- tpl (toYaml .) $ | nindent 4 }}
   {{- end }}
 {{ end -}}
