--- a/prometheus/values.yaml
+++ b/prometheus/values.yaml
@@ -81,15 +81,13 @@ kube-state-metrics:
 
   serviceMonitor:
     enabled: true
-    relabelings:
-      - sourceLabels: ["label_app_kubernetes_io_name"]
-        targetLabel: "container"
     metricRelabelings:
       # ADD COMMON pod and LABEL TO ALL METRICS
       # values based on orgiginal exported_pod label (container also)
       - sourceLabels: ["exported_pod"]
         targetLabel: "pod"
-      - sourceLabels: ["exported_container"]
+      - sourceLabels: ["exported_container", "label_app_kubernetes_io_name"]
+        separator: ""
         targetLabel: "container"
       - sourceLabels: ["exported_namespace"]
         targetLabel: "namespace"
