--- a/environment/values.yaml
+++ b/environment/values.yaml
@@ -69,7 +69,7 @@ chart_apps:
       kong:
         proxy:
           annotations:
-            external-dns.alpha.kubernetes.io/hostname: "*.{{ .Values.company.domain.env }}"
+            external-dns.alpha.kubernetes.io/hostname: "*.{{ .Values.company.domain.env }}."
   cert-manager:
     enabled: false
     parameters:
