--- a/chart_deps/grafana/grafana-operated/values.yaml
+++ b/chart_deps/grafana/grafana-operated/values.yaml
@@ -1,3 +1,8 @@
+#Used to render company specific templates
+domain:
+  root: #example.com
+  env: #prd.example.com int.exmple.com dev.example.com etc
+
 selector: {}
 
 client: {}
