--- a/environment/values.yaml
+++ b/environment/values.yaml
@@ -66,7 +66,7 @@ chart_apps:
   grafana:
     enabled: false
     parameters:
-    - name: "gloabal.domain.env"
+    - name: "global.domain.env"
       value: "{{ .Values.company.domain.env }}"
     - name: "global.domain.root"
       value: "{{ .Values.company.domain.root }}"
