--- a/prometheus/values.yaml
+++ b/prometheus/values.yaml
@@ -5,6 +5,11 @@ global:
     pspAnnotations: {}
 
   imagePullSecrets: []
+  #Used to render company specific templates
+  domain:
+    root: #example.com
+    env: #prd.example.com int.exmple.com dev.example.com etc
+
 
 alertmanager-configs:
   enabled: false
